# secret_santa

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api.py  app.py  bring_users.py  core.py  email_send.py  logic.py  logic_asignment.py  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: publish.yaml
backend/: main.py
backend/secret_santa_logic/: email_send.py  logic_asignment.py  main.py  schemas.py
backend/secret_santa_logic/users_file/: users copy.csv  users.csv
frontend/: package-lock.json
frontend/src/: App.jsx
secret_santa_logic/: bring_users.py  email_send.py
users_file/: users copy.csv  users.csv
